export const snapshot = {};

snapshot[`createValueMixin - toHaveStatus with source context 1`] = `
'Expected status to be 404, but got 200

Context (packages/probitas-expect/mixin/value_mixin_test.ts:138:5)

137│ Deno.test("createValueMixin - toHaveStatus with source context", async (t) => {
138│   await t.step("fail", async () => {
139│     const mixin = createValueMixin(() => 200, () => false, {
   ┆
145│       t,
146│       catchError(() => applied.toHaveStatus(404)).message,
   │                                ^
147│     );'
`;

snapshot[`createValueMixin - toHaveStatusStrictEqual 1`] = `
"Expected data to strictly equal {
  x: 1,
  y: undefined,
}, but got {
  x: 1,
}"
`;

snapshot[`createValueMixin - toHaveStatus 1`] = `"Expected status to be 404, but got 200"`;

snapshot[`createValueMixin - toHaveStatusEqual 1`] = `
"Expected data to equal {
  x: 2,
}, but got {
  x: 1,
}"
`;

snapshot[`createValueMixin - toHaveStatusSatisfying 1`] = `"Expected status to satisfy the matcher, but it failed: Must be 404"`;
